# Pawdirecte.rs

./: .gitignore  CITATION.cff  Cargo.toml  README.md
examples/: login_with_double_auth.rs  relogin.rs
src/: lib.rs
src/api/: authentication.rs  constants.rs  errors.rs  login_manager.rs  mod.rs  request_manager.rs
src/definitions/: api.rs  mod.rs
src/definitions/models/: accounts.rs  class.rs  double_auth.rs  mod.rs  profiles.rs
src/definitions/requests/: double_auth.rs  login.rs  mod.rs
src/definitions/responses/: double_auth.rs  login.rs  mod.rs
tests/: 2fa_login_init.json  family_login.json  student_login.json  studentp_login.json
