[package]
name = "pawdirecte"
version = "0.1.0"
authors = ["LiterateInk <contact@literate.ink>"]
documentation = "https://crowous.docs.literate.ink/"
repository = "https://github.com/LiterateInk/Pawdirecte.rs"
description = "A purrfect API wrapper for EcoleDirecte."
keywords = ["ecoledirecte", "wrapper", "api"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
