[package]
name = "pawdirecte"
version = "0.1.0"
authors = ["LiterateInk <contact@literate.ink>"]
documentation = "https://pawdirecte.docs.literate.ink/"
repository = "https://github.com/LiterateInk/Pawdirecte.rs"
description = "A purrfect API wrapper for EcoleDirecte."
keywords = ["ecoledirecte", "wrapper", "api"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
automod = "1.0.15"
const_format = "0.2.34"
cookie_parser = "1.0.1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }
